kubernetes/apps/forgejo/forgejo/app/httpRoute.yaml
---
# yaml-language-server: $schema=https://schemas.mortebrume.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  hostnames:
    - "code.mortebrume.eu"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: forgejo-anubis
          port: 8080
      timeouts:
        request: 300s
---
# yaml-language-server: $schema=https://schemas.mortebrume.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-redir
spec:
  hostnames:
    - "git.mortebrume.eu"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 301
            scheme: https
            hostname: code.mortebrume.eu
